Fixes foreground of sidetrack
sidetrack is an alias to secondarytrack, but did ignore foreground setting

--- a/src/tikzlibrarytrackschematic.topology.code.tex
+++ b/src/tikzlibrarytrackschematic.topology.code.tex
@@ -71,7 +71,7 @@
 \newcommand\secondarytrack{}% just for safety
 \def\secondarytrack{\path[draw=\foreground,SecondaryTrack]}% \secondarytrack (coord1) -- (coord2);
 \newcommand\sidetrack{}% just for safety
-\def\sidetrack{\path[draw,SecondaryTrack]}% alias for \secondarytrack
+\def\sidetrack{\path[draw=\foreground,SecondaryTrack]}% alias for \secondarytrack
 %
 %% symbol definition
 \tikzset{%
