fixed PackageWarning Error in development mode

--- a/src/tikz-trackschematic.sty
+++ b/src/tikz-trackschematic.sty
@@ -29,8 +29,9 @@
     \usetikzlibrary{trackschematic-dev.symbology}%
     \usetikzlibrary{trackschematic-dev}%
   }{%
-    \PackageWarning{tikz-trackschematic}{development mode not available}{execute the dev-install.sh script provided by the package repository}%
-    \PackageWarning{tikz-trackschematic}{development mode not available}{continuing in normal mode}%
+    \PackageWarning{tikz-trackschematic}{development mode not available}%
+    \PackageWarning{tikz-trackschematic}{execute the script './build.sh --install-dev' provided by the package repository}%
+    \PackageWarning{tikz-trackschematic}{continuing in normal mode}%
     \usetikzlibrary{trackschematic.topology}%
     \usetikzlibrary{trackschematic.trafficcontrol}%
     \usetikzlibrary{trackschematic.vehicles}%
