--- a/doc/snippets.tex
+++ b/doc/snippets.tex
@@ -569,33 +569,33 @@ No. & Name & Clip & Code & Manual reference\\
 %% transmitter %%
 
 \hline
-\No & transmitter (right \& left) &
-\symbol{transmitter.tikz} & \code{transmitter.tikz} &
-\parbox[c]{4cm}{\centering\texttt{trafficcontrol} \\ Section \ref{sym:generictransmitter} p. \pageref{sym:generictransmitter}} \\
-
-\hline
-\No & \parbox[c]{5cm}{transmitter (right)\\with signal} &
-\symbol{transmitter_right_with_signal.tikz} & \code{transmitter_right_with_signal.tikz} &
-\parbox[c]{4cm}{\centering\texttt{trafficcontrol} \\ Section \ref{sym:generictransmitter} p. \pageref{sym:generictransmitter} \\ \& \\ Section \ref{sym:routesignal} p. \pageref{sym:routesignal}} \\
-
-\hline
-\No & \parbox[c]{5cm}{transmitter (right \& left)\\ effective forward} &
-\symbol{transmitter_forward.tikz} & \code{transmitter_forward.tikz} &
+\No & balise (forward \& backward) &
+\symbol{balises.tikz} & \code{balises.tikz} &
 \parbox[c]{4cm}{\centering\texttt{trafficcontrol} \\ Section \ref{sym:balise} p. \pageref{sym:balise}} \\
 
 \hline
-\No & \parbox[c]{5cm}{transmitter (right \& left)\\ effective backward} &
-\symbol{transmitter_backward.tikz} & \code{transmitter_backward.tikz} &
+\No & \parbox[c]{5cm}{balise (forward)\\with signal} &
+\symbol{balise_forward_with_signal.tikz} & \code{balise_forward_with_signal.tikz} &
+\parbox[c]{4cm}{\centering\texttt{trafficcontrol} \\ Section \ref{sym:balise} p. \pageref{sym:balise} \\ \& \\ Section \ref{sym:routesignal} p. \pageref{sym:routesignal}} \\
+
+\hline
+\No & \parbox[c]{5cm}{balise (forward \& backward)\\ switched} &
+\symbol{balise_switched.tikz} & \code{balise_switched.tikz} &
 \parbox[c]{4cm}{\centering\texttt{trafficcontrol} \\ Section \ref{sym:balise} p. \pageref{sym:balise}} \\
 
 \hline
-\No & \parbox[c]{5cm}{transmitter (right \& left)\\ effective bidirectional} &
-\symbol{transmitter_bidirectional.tikz} & \code{transmitter_bidirectional.tikz} &
+\No & \parbox[c]{5cm}{individual balises\\ (forward \& backward)} &
+\symbol{individual_balises.tikz} & \code{individual_balises.tikz} &
 \parbox[c]{4cm}{\centering\texttt{trafficcontrol} \\ Section \ref{sym:balise} p. \pageref{sym:balise}} \\
 
 \hline
-\No & loop transmitter&
-\symbol{loop_transmitter.tikz} & \code{loop_transmitter.tikz} &
+\No & \parbox[c]{5cm}{individual balises\\ (forward \& backward) mixed} &
+\symbol{individual_balises_mixed.tikz} & \code{individual_balises_mixed.tikz} &
+\parbox[c]{4cm}{\centering\texttt{trafficcontrol} \\ Section \ref{sym:balise} p. \pageref{sym:balise}} \\
+
+\hline
+\No & track loop &
+\symbol{trackloop.tikz} & \code{trackloop.tikz} &
 \parbox[c]{4cm}{\centering\texttt{trafficcontrol} \\ Section \ref{sym:loop} p. \pageref{sym:loop}} \\
 
 %%%%%%%%%%%%%%%%%%%%%
