--- a/src/tikzlibrarytrackschematic.symbology.code.tex
+++ b/src/tikzlibrarytrackschematic.symbology.code.tex
@@ -94,10 +94,9 @@
     \tsSymbol{clearing_point}           & clearing point                                    \\%
     \tsSymbol{block_clearing_point}     & block clearing point                              \\%
     \tsSymbol{route_clearing_point}     & route clearing point                              \\%
-    \tsSymbol{transmitter}              & transmitter                                       \\%
-    \tsSymbol{transmitter_forward}      & transmitter effective forward                     \\%
-    \tsSymbol{transmitter_bidirectional}& transmitter bidirectional                         \\%
-    \tsSymbol{loop_transmitter}         & loop transmitter                                  \\%
+    \tsSymbol{balise_group}             & unenumerated balise group (switchable)            \\%
+    \tsSymbol{balise_individual}        & individual balises (switchable)                   \\%
+    \tsSymbol{trackloop}                & track loop transmitter                            \\%
     \tsSymbol{route}                    & route                                             \\%
     \tsSymbol{direction_control}        & direction control                                 \\%
     \tsSymbol{platform}                 & platform                                          \\%
