--- a/test/transmitter.tex
+++ b/test/transmitter.tex
@@ -10,34 +10,57 @@
 \begin{document}
   \begin{tikzpicture}
   
-    \foreach \i in {1,2,...,3}{% base coordinate
+    \foreach \i in {1,...,8}{% base coordinate
       \coordinate (A\i) at ($(0,0) + 2*(0,-\i)$);% base coordinate
       \coordinate (B\i) at ($(8,0) + 2*(0,-\i)$);% base coordinate
     }
 
-    \foreach \i in {1,2,...,3}{% draw main tracks on base coordinate
+    \foreach \i in {1,...,8}{% draw main tracks on base coordinate
       \maintrack (A\i) --   (B\i);
     }
 
-    \foreach \i in {1,2,...,3}{% coordinates for testing symbols
+    \foreach \i in {1,...,8}{% coordinates for testing symbols
       \coordinate (X\i-1) at ($(1,0) + 2*(0,-\i)$);
       \coordinate (X\i-2) at ($(3,0) + 2*(0,-\i)$);
       \coordinate (X\i-3) at ($(5,0) + 2*(0,-\i)$);
       \coordinate (X\i-4) at ($(7,0) + 2*(0,-\i)$);
     }
 
-    \balise[] at (X1-1) label (X1-1);
-    \balise[position=left] at (X1-2) label (X1-2);
-    \balise[forward] at (X1-3) label (X1-3);
-    \balise[forward,position=left] at (X1-4) label (X1-4);
+    \balise[forward] at (X1-1) label (X1-1);
+    \balise[forward,position=left] at (X1-2) label (X1-2);
+    \balise[backward] at (X1-3) label (X1-3);
+    \balise[backward,position=left] at (X1-4) label (X1-4);
 
-    \balise[backward] at (X2-1) label (X2-1);
-    \balise[backward,position=left] at (X2-2) label (X2-2);
-    \balise[bidirectional] at (X2-3) label (X2-3);
-    \balise[bidirectional,position=left] at (X2-4) label (X2-4);
+    \balise[forward,switched] at (X2-1) label (X2-1);
+    \balise[forward,position=left,switched] at (X2-2) label (X2-2);
+    \balise[backward,switched] at (X2-3) label (X2-3);
+    \balise[backward,position=left,switched] at (X2-4) label (X2-4);
 
-    \trackloop[] at (X3-1) label (X3-1);
-    \trackloop[position=left] at (X3-2) label (X3-2);
+    \balise[forward,along={0,1,2,3}] at (X3-1) label (X3-1);
+    \balise[forward,oppose={0,1,2,3}] at (X3-2) label (X3-2);
+    \balise[backward,along={0,1,2,3}] at (X3-3) label (X3-3);
+    \balise[backward,oppose={0,1,2,3}] at (X3-4) label (X3-4);
+
+    \balise[forward,along={0,1,2,3},index] at (X4-1) label (X4-1);
+    \balise[forward,oppose={0,1,2,3},index] at (X4-2) label (X4-2);
+    \balise[backward,along={0,1,2,3},index] at (X4-3) label (X4-3);
+    \balise[backward,oppose={0,1,2,3},index] at (X4-4) label (X4-4);
+
+    \balise[forward,along={0,3,4,5,7,8,9},oppose={0,1,2,3,6,10,11,12,13},index] at (X5-1) label (X5-1);
+    \balise[backward,along={0,1,2,3,5,6,10,11,12,13},oppose={0,1,2,3,4,7,8,9},index] at (X5-4) label (X5-4);
+
+    \balise[forward,along switched={0,1,2,3}] at (X6-1) label (X6-1);
+    \balise[forward,oppose switched={0,1,2,3}] at (X6-2) label (X6-2);
+    \balise[backward,along switched={0,1,2,3}] at (X6-3) label (X6-3);
+    \balise[backward,oppose switched={0,1,2,3}] at (X6-4) label (X6-4);
+
+    \balise[forward,along switched={0,1,2,3},index] at (X7-1) label (X7-1);
+    \balise[forward,oppose switched={0,1,2,3},index] at (X7-2) label (X7-2);
+    \balise[backward,along switched={0,1,2,3},index] at (X7-3) label (X7-3);
+    \balise[backward,oppose switched={0,1,2,3},index] at (X7-4) label (X7-4);
+
+    \trackloop[] at (X8-1) label (X8-1);
+    \trackloop[position=left] at (X8-2) label (X8-2);
 
   \end{tikzpicture}
 \end{document}
