--- a/doc/examples/minimal_working_example.tex
+++ b/doc/examples/minimal_working_example.tex
@@ -10,7 +10,7 @@
     \maintrack (0,0) -- (6,0);
 
     % place a train on the track
-    \train[forward] at (5,0) label (T1);
+    \train[forward] at (5,0) label ();
 
   \end{tikzpicture}
 \end{document}
